@@ -2,8 +2,8 @@ plugins {
     id 'java'
     id 'java-library'
     id 'jacoco'
-    id 'org.owasp.dependencycheck' version '9.2.0'
-    id 'org.sonarqube' version '5.1.0.4882'
+    id 'org.owasp.dependencycheck' version '11.1.1'
+    id 'org.sonarqube' version '6.0.1.5171'
 }
 
 group 'uk.gov.hmcts.reform.payment'
@@ -13,7 +13,7 @@ def javaLoggingVersion = '6.0.1'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
@@ -46,7 +46,7 @@ configurations.all {
             if (det.requested.name == 'commons-io') {
                 det.useVersion '2.8.0'
             }
-            
+
             /*CVE-2021-44228, CVE-2021-44832, CVE-2021-45046, CVE-2021-45105*/
             if (det.requested.name == 'log4j-api' || det.requested.name == 'log4j-to-slf4j') {
                 det.useVersion '2.17.1'
@@ -81,28 +81,36 @@ configurations.all {
 dependencies {
     implementation group: 'io.rest-assured', name: 'rest-assured', version: '5.5.0'
 
-    implementation(group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.2.0') {
+    implementation(group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.0') {
         exclude group: 'com.google.guava', module: 'guava'
         exclude group: 'org.springframework.security', module: 'spring-security-crypto'
     }
-    implementation group: 'org.bouncycastle', name: 'bcprov-jdk18on', version: '1.78.1'
-    implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.6'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '3.3.3'
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.1.3'
-    implementation group: 'io.github.openfeign', name: 'feign-jackson', version: '13.3'
+    implementation group: 'org.bouncycastle', name: 'bcprov-jdk18on', version: '1.79'
+    implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.7'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '3.3.5'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.2.0'
+    implementation group: 'io.github.openfeign', name: 'feign-jackson', version: '13.5'
     implementation group: 'org.json', name: 'json', version: '20240303'
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.11.0")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.11.0")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.11.4")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.11.4")
     testImplementation 'com.github.tomakehurst:wiremock:3.0.1'
+    testImplementation 'com.github.hmcts:fortify-client:1.4.5:all'
+}
+
+
+task fortifyScan(type: JavaExec)  {
+    mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 jacocoTestReport {
   executionData(test)
   reports {
-    xml.enabled = true
-    csv.enabled = false
-    xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
+    xml.required = true
+    csv.required = false
+    xml.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
   }
 }
 
@@ -117,7 +125,7 @@ sonarqube {
     property "sonar.projectName", "Reform :: payment-jobs"
     property "sonar.projectKey", "uk.gov.hmcts.reform:payment-jobs"
     property "sonar.coverage.exclusions", "**/JobProcessorConfiguration*,**JobProcessorApplication*"
-    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
+    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.outputLocation}"
   }
 }
 
